# PixelsToPlayers-PythonHelper

./: .gitignore  DEMO_README.md  README.md  build_exe.py  make_app.bat  make_installer.bat  make_msi.py  pyproject.toml
src/PixelsToPlayers/: app.py
src/PixelsToPlayers/webcam/: __init__.py  webcam.py
src/pixels_to_players/: app.py  demo_test.py
src/pixels_to_players/config/: __init__.py  config_manager.py
src/pixels_to_players/file_operations/: __init__.py  file_manager.py  logger.py
src/pixels_to_players/firebase/: __init__.py  firebase_client.py
src/pixels_to_players/screen_recording/: __init__.py  recording.py  test_recording.py
src/pixels_to_players/utils/: __init__.py  os_version.py
src/pixels_to_players/video_processor/: HeatmapGenerator.py  processor.py  processorHDBSCAN.py  utils.py
src/pixels_to_players/webcam/: __init__.py  calibration.py  client.py  processors.py  test_facemesh.py  tracking.py
tests/unit/: test_build.py  test_build_windows.py  test_recording.py  test_screen_recording.py  test_webcam.py
