[project]
name = "pixels-to-players"
version = "0.1.0"
readme = "README.md"
requires-python = ">=3.10,<3.13"
dependencies = [
    "requests>=2.32.5,<3.0.0",
    "numpy (<2)",
    "poetry-core (>=2.0.0)",
    "opencv-python (<4.10)",
    "mediapipe (>=0.10.21,<0.11.0)",
    "pyautogui (>=0.9.54,<1.0.0)"
]

[project.scripts]
ptp = "pixels_to_players.__main__:main"  # or app:main

[tool.poetry]
packages = [{ include = "pixels_to_players", from = "src" }]

[tool.deptry]
known_first_party = ["pixels_to_players"]   # your import package
exclude = [".venv", "tests", "build", "dist"]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[dependency-groups]
dev = [
    "deptry (>=0.23.1,<0.24.0)",
    "pyinstaller (>=6.16.0,<7.0.0)"
]
